Fix gallery being too large

--- a/assets/styles/_app.scss
+++ b/assets/styles/_app.scss
@@ -297,6 +297,7 @@ $app-margin: app-spacing(6);
     margin-bottom: 10vh;
     scroll-snap-type: x mandatory;
     scroll-padding: 30px;
+    max-height: 60vh;
 
     &::after { 
         // Workaround for https://stackoverflow.com/questions/26888428/display-flex-loses-right-padding-when-overflowing
